--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+
+
 <!doctype html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/image/WhatsApp Image 2024-08-14 at 06.33.08_b063196d.jpg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>HavenHue</title>
   </head>
   <body>
     <div id="root"></div>
